views\TicketFollowUp added Bootstrap

--- a/TipMvcApp/Views/TicketFollowUp/ByDate.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/ByDate.cshtml
@@ -6,7 +6,7 @@
 
 <h1>ByDate</h1>
 
-<table class="table">
+<table class="table table-hover table-striped table-bordered">
     <thead>
         <tr>
             <th>
@@ -49,5 +49,5 @@
     </tbody>
 </table>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
