--- a/TipMvcApp/Views/TicketFollowUp/ByStatus.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/ByStatus.cshtml
@@ -7,7 +7,7 @@
 <h1>ByStatus</h1>
 
 
-<table class="table">
+<table class="table table-hover table-striped table-bordered">
     <thead>
         <tr>
             <th>
@@ -50,5 +50,5 @@
     </tbody>
 </table>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
