--- a/TipMvcApp/Views/TicketFollowUp/Create.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/Create.cshtml
@@ -40,7 +40,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
