--- a/TipMvcApp/Views/TicketFollowUp/Details.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/Details.cshtml
@@ -43,5 +43,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
