--- a/TipMvcApp/Views/TicketFollowUp/Index.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/Index.cshtml
@@ -7,10 +7,10 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a type="submit" class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-hover table-striped table-bordered">
+    <thead class="thread-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.TicketId)
