--- a/TipMvcApp/Views/Employee/Delete.cshtml
+++ b/TipMvcApp/Views/Employee/Delete.cshtml
@@ -45,6 +45,6 @@
     
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
     </form>
 </div>
