--- a/TipMvcApp/Views/Employee/Index.cshtml
+++ b/TipMvcApp/Views/Employee/Index.cshtml
@@ -7,9 +7,9 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a type="submit" class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-hover table-striped table-bordered">
     <thead>
         <tr>
             <th>
