--- a/TipMvcApp/Views/TicketPriority/Details.cshtml
+++ b/TipMvcApp/Views/TicketPriority/Details.cshtml
@@ -37,6 +37,5 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
