Few changes in Ticket

--- a/TipMvcApp/Views/Ticket/Index.cshtml
+++ b/TipMvcApp/Views/Ticket/Index.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedDate)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -48,6 +51,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreatedDate)
+                </td>
             <td>
                     @Html.ActionLink("Edit", "Edit", new { ticketId = item.TicketId }) |
                     @Html.ActionLink("Details", "Details", new { ticketId = item.TicketId }) |
