--- a/TipMvcApp/Views/TicketType/ByAssignedEmpId.cshtml
+++ b/TipMvcApp/Views/TicketType/ByAssignedEmpId.cshtml
@@ -6,9 +6,6 @@
 
 <h1>ByAssignedEmpId</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -51,3 +48,6 @@
 }
     </tbody>
 </table>
+<div>
+    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
+</div>
