Some changes in ticket type

--- a/TipMvcApp/Views/Home/Index.cshtml
+++ b/TipMvcApp/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
     .hero-section {
         position: relative;
-        background: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2FAllCloudIndia%2F&psig=AOvVaw2LZx_8ugOYA4iRt3bbWMDl&ust=1724841330561000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIiu6er8lIgDFQAAAAAdAAAAABAEhttps://media-exp1.licdn.com/dms/image/C510BAQExIHFQvmGQYg/company-logo_200_200/0?e=2159024400&v=beta&t=L7OalUNQEYNxjHheTKsboy8fra8HeRp2V4Ul2Yf0cQw") no-repeat center center;
+        background: url("~/Image/ice.jfif") no-repeat center center;
         background-size: cover;
         color: white;
         padding: 60px 0;
