--- a/TipMvcApp/Views/TicketType/Edit.cshtml
+++ b/TipMvcApp/Views/TicketType/Edit.cshtml
@@ -14,8 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TicketTypeId" class="control-label"></label>
-                <input asp-for="TicketTypeId" class="form-control" />
-                <span asp-validation-for="TicketTypeId" class="text-danger"></span>
+                <select asp-for="TicketTypeId" class="form-control">
+                    @foreach (SelectListItem ticketlist in await Helper.GetAllTicketTypes())
+                    {
+                        <option value="@ticketlist.Value">@ticketlist.Text</option>
+                    }
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="TicketTypeName" class="control-label"></label>
@@ -24,13 +28,21 @@
             </div>
             <div class="form-group">
                 <label asp-for="AssignedToEmpId" class="control-label"></label>
-                <input asp-for="AssignedToEmpId" class="form-control" />
-                <span asp-validation-for="AssignedToEmpId" class="text-danger"></span>
+                <select asp-for="AssignedToEmpId" class="form-control">
+                    @foreach (SelectListItem emplist in await Helper.GetAllEmployees())
+                    {
+                        <option value="@emplist.Value">@emplist.Text</option>
+                    }
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="PriorityId" class="control-label"></label>
-                <input asp-for="PriorityId" class="form-control" />
-                <span asp-validation-for="PriorityId" class="text-danger"></span>
+                <select asp-for="PriorityId" class="form-control">
+                    @foreach (SelectListItem prilist in await Helper.GetAllPriorities())
+                    {
+                        <option value="@prilist.Value">@prilist.Text</option>
+                    }
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
