--- a/TipMvcApp/Views/TicketType/Create.cshtml
+++ b/TipMvcApp/Views/TicketType/Create.cshtml
@@ -14,12 +14,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TicketTypeId" class="control-label"></label>
-                <select asp-for="TicketTypeId" class="form-control">
-                    @foreach (SelectListItem ticketlist in await Helper.GetAllTicketTypes())
-                    {
-                        <option value="@ticketlist.Value">@ticketlist.Text</option>
-                    }
-                </select>
+                <input asp-for="TicketTypeId" class="form-control" />
+                <span asp-validation-for="TicketTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TicketTypeName" class="control-label"></label>
