--- a/TipMvcApp/Views/Ticket/Create.cshtml
+++ b/TipMvcApp/Views/Ticket/Create.cshtml
@@ -13,8 +13,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TicketId" class="control-label"></label>
-                <input asp-for="TicketId" class="form-control" />
+                <label asp-for="TicketId" hidden class="control-label"></label>
+                <input asp-for="TicketId" hidden class="form-control" />
                 <span asp-validation-for="TicketId" class="text-danger"></span>
             </div>
             <div class="form-group">
