--- a/TipMvcApp/Views/Employee/Edit.cshtml
+++ b/TipMvcApp/Views/Employee/Edit.cshtml
@@ -13,8 +13,8 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="EmpId" class="control-label"></label>
-                <input asp-for="EmpId" class="form-control" />
+                <label asp-for="EmpId"  class="control-label"></label>
+                <input asp-for="EmpId" readonly class="form-control" />
                 <span asp-validation-for="EmpId" class="text-danger"></span>
             </div>
             <div class="form-group">
