Changes in program. cs MVC

--- a/TipMvcApp/Views/TicketFollowUp/Index.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/Index.cshtml
@@ -60,3 +60,6 @@
 }
     </tbody>
 </table>
+<div>
+    <a type="submit" class="btn btn-outline-primary" href="http://localhost:5022/">Home</a>
+</div>
