--- a/TipMvcApp/Views/Employee/Edit.cshtml
+++ b/TipMvcApp/Views/Employee/Edit.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="EmpId"  class="control-label"></label>
+                <label asp-for="EmpId" class="control-label"></label>
                 <input asp-for="EmpId" readonly class="form-control" />
                 <span asp-validation-for="EmpId" class="text-danger"></span>
             </div>
@@ -49,5 +49,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
