--- a/TipMvcApp/Views/Home/Index.cshtml
+++ b/TipMvcApp/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
 <div class="container card-container">   
     <a href="../Employee" class="card-link">
     <div class="card">
+        <img src="~/Images/employee.png" alt="Card image" class="card-img-top" />
         <div class="card-body">
             <h5 class="card-title">Manage Employee Profile</h5>
             <p class="card-text">Update Employee information.</p>           
@@ -19,7 +20,8 @@
     </a>
 
     <a href="../TicketPriority" class="card-link">
-    <div class="card"> 
+    <div class="card">
+            <img src="~/Images/employee.png" alt="Card image" class="card-img-top" />
         <div class="card-body">
             <h5 class="card-title">Know Priorities of tickets</h5>
             <p class="card-text">Ticket priorities based on the Priority.</p>
@@ -29,6 +31,7 @@
 
     <a href="../TicketType" class="card-link">
     <div class="card">
+    <img src="~/Images/employee.png" alt="Card image" class="card-img-top" />
         <div class="card-body">
             <h5 class="card-title">Know Different Types of Tickets</h5>
             <p class="card-text">Know about the different types of tickets AllCloud serves.</p>
@@ -38,6 +41,7 @@
 
     <a href="../Ticket" class="card-link">
     <div class="card">
+     <img src="~/Images/employee.png" alt="Card image" class="card-img-top" />
         <div class="card-body">
             <h5 class="card-title">Submit a New Ticket</h5>
             <p class="card-text">Having an issue? Submit a new ticket for quick resolution.</p>
@@ -47,6 +51,7 @@
 
     <a href="../TicketFollowUp" class="card-link">
     <div class="card">
+    <img src="~/Images/employee.png" alt="Card image" class="card-img-top" />
         <div class="card-body">
             <h5 class="card-title">Follow Up Tickets</h5>
             <p class="card-text">Follow up on the submitted tickets.</p>
