--- a/TipMvcApp/Views/TicketFollowUp/Index.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/Index.cshtml
@@ -61,5 +61,5 @@
     </tbody>
 </table>
 <div>
-    <a type="submit" class="btn btn-outline-primary" href="http://localhost:5022/">Home</a>
+    <a type="submit" class="btn btn-outline-primary" asp-controller="Home" asp-action="Index">Home</a>
 </div>
