--- a/TipMvcApp/Views/Employee/Create.cshtml
+++ b/TipMvcApp/Views/Employee/Create.cshtml
@@ -38,15 +38,13 @@
                 <span asp-validation-for="MobileNo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" /> |
+                <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
