--- a/TipMvcApp/Views/TicketFollowUp/Index.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a type="submit" class="btn btn-primary" asp-action="Create">Create New</a>
+    <a type="submit" class="btn btn-primary" asp-action="Create">Add Followup</a>
 </p>
 <table class="table table-hover table-striped table-bordered">
     <thead class="thread-dark">
@@ -27,7 +27,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.UpdatedDate)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -49,12 +49,12 @@
                     @Html.DisplayFor(modelItem => item.UpdatedDate)
                 </td>
             <td>
-                    @Html.ActionLink("Edit", "Edit", new { ticketId = item.TicketId, srNo = item.SrNo }) |
-                @Html.ActionLink("Details", "Details", new { ticketId = item.TicketId, srNo = item.SrNo }) |
-                    @Html.ActionLink("ByDate", "ByDate", new { updatedDate = item.UpdatedDate }) |
-                    @Html.ActionLink("ByStatus", "ByStatus", new { status = item.Status }) |
-                    @Html.ActionLink("ByTicketId", "ByTicketId", new { ticketId = item.TicketId }) |
-                    @Html.ActionLink("Delete", "Delete", new { ticketId = item.TicketId, srNo = item.SrNo })
+                    @Html.ActionLink("Edit", "Edit", new { ticketId = item.TicketId, srNo = item.SrNo }, new { @class = "btn btn-outline-primary" }) |
+                    @Html.ActionLink("Details", "Details", new { ticketId = item.TicketId, srNo = item.SrNo }, new { @class = "btn btn-outline-primary" }) |
+                    @Html.ActionLink("Date", "ByDate", new { updatedDate = item.UpdatedDate }, new { @class = "btn btn-outline-primary" }) |
+                    @Html.ActionLink("Status", "ByStatus", new { status = item.Status }, new { @class = "btn btn-outline-primary" }) |
+                    @Html.ActionLink("Ticket", "ByTicketId", new { ticketId = item.TicketId }, new { @class = "btn btn-outline-primary" }) |
+                    @Html.ActionLink("Delete", "Delete", new { ticketId = item.TicketId, srNo = item.SrNo }, new { @class = "btn btn-outline-danger" })
             </td>
         </tr>
 }
