--- a/TipMvcApp/Views/Employee/Index.cshtml
+++ b/TipMvcApp/Views/Employee/Index.cshtml
@@ -57,3 +57,6 @@
 }
     </tbody>
 </table>
+<div>
+    <a type="submit" class="btn btn-outline-primary" asp-controller="Home" asp-action="Index">Home</a>
+</div>
