--- a/TipMvcApp/Views/Ticket/ByEmpIdandTypeId.cshtml
+++ b/TipMvcApp/Views/Ticket/ByEmpIdandTypeId.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "ByEmpIdandTypeId";
 }
 
+<link rel="stylesheet" href="~/css/StyleSheet.css" />
+
 <h1>ByEmpIdandTypeId</h1>
 
 <p>
