--- a/TipMvcApp/Views/TicketFollowUp/ByDate.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/ByDate.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "ByDate";
 }
-
+<link rel="stylesheet" href="~/css/StyleSheet.css" />
 <h1>ByDate</h1>
 
 <table class="table table-hover table-striped table-bordered">
