--- a/TipMvcApp/Views/TicketPriority/Index.cshtml
+++ b/TipMvcApp/Views/TicketPriority/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Ticket Priority Index";
 }
-
+<link rel="stylesheet" href="~/css/StyleSheet.css" />
 <h1>Index</h1>
 
 <p>
