--- a/TipMvcApp/Views/TicketType/ByAssignedEmpId.cshtml
+++ b/TipMvcApp/Views/TicketType/ByAssignedEmpId.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "ByAssignedEmpId";
 }
-
+<link rel="stylesheet" href="~/css/StyleSheet.css" />
 <h1>ByAssignedEmpId</h1>
 
 <table class="table">
