--- a/TipMvcApp/Views/Employee/Create.cshtml
+++ b/TipMvcApp/Views/Employee/Create.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
+<link rel="stylesheet" href="~/css/StyleSheet.css" />
+
+
 <h1>Create</h1>
 
 <h4>Employee</h4>
@@ -49,3 +52,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+</div>
