--- a/TipMvcApp/Views/TicketFollowUp/Edit.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+<link rel="stylesheet" href="~/css/StyleSheet.css" />
 <h1>Edit</h1>
 
 <h4>TicketFollowUp</h4>
