--- a/TipMvcApp/Views/TicketPriority/Create.cshtml
+++ b/TipMvcApp/Views/TicketPriority/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Create";
 }
-
+<link rel="stylesheet" href="~/css/StyleSheet.css" />
 <h1>Create</h1>
 
 <h4>TicketPriority</h4>
