--- a/TipMvcApp/Views/Shared/_Layout.cshtml
+++ b/TipMvcApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TicketType" asp-action="Index">Ticket Type  </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-istem">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Raise a Ticket  </a>
                         </li>
                         <li class="nav-item">
