--- a/TipMvcApp/Views/Ticket/Index.cshtml
+++ b/TipMvcApp/Views/Ticket/Index.cshtml
@@ -67,3 +67,6 @@
 }
     </tbody>
 </table>
+<div>
+    <a type="submit" class="btn btn-outline-primary" asp-controller="Home" asp-action="Index">Home</a>
+</div>
