--- a/TipMvcApp/Views/TicketType/Index.cshtml
+++ b/TipMvcApp/Views/TicketType/Index.cshtml
@@ -51,4 +51,7 @@
         </tr>
 }
     </tbody>
-</>
+</table>
+<div>
+    <a type="submit" class="btn btn-outline-primary" asp-controller="Home" asp-action="Index">Home</a>
+</div>
