--- a/TipMvcApp/Views/TicketFollowUp/Create.cshtml
+++ b/TipMvcApp/Views/TicketFollowUp/Create.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="SrNo" class="control-label"></label>
-                <input asp-for="SrNo" class="form-control"/>
+                <input asp-for="SrNo" class="form-control" readonly/>
                 <span asp-validation-for="SrNo" class="text-danger"></span>
             </div>
             <div class="form-group">
