--- a/TipMvcApp/Views/Ticket/ByTypeId.cshtml
+++ b/TipMvcApp/Views/Ticket/ByTypeId.cshtml
@@ -61,5 +61,5 @@
     </tbody>
 </table>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
