--- a/TipMvcApp/Views/Ticket/Delete.cshtml
+++ b/TipMvcApp/Views/Ticket/Delete.cshtml
@@ -50,9 +50,9 @@
             @Html.DisplayFor(model => model.CreatedDate)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
     </form>
 </div>
