--- a/TipMvcApp/Views/Ticket/Details.cshtml
+++ b/TipMvcApp/Views/Ticket/Details.cshtml
@@ -45,5 +45,5 @@
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
