--- a/TipMvcApp/Views/Ticket/Edit.cshtml
+++ b/TipMvcApp/Views/Ticket/Edit.cshtml
@@ -59,7 +59,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a type="submit" class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
