--- a/TipMvcApp/Views/TicketType/Index.cshtml
+++ b/TipMvcApp/Views/TicketType/Index.cshtml
@@ -23,8 +23,8 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PriorityId)
-            </th>
-            <th></th>
+            </th> 
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -46,7 +46,7 @@
                     @Html.ActionLink("Edit", "Edit", new { TypeId = item.TicketTypeId }, new { @class = "btn btn-outline-primary" }) |
                     @Html.ActionLink("ByAssignedEmpId", "ByAssignedEmpId", new { EmpId = item.AssignedToEmpId }, new { @class = "btn btn-outline-primary" }) |
                     @Html.ActionLink("Details", "Details", new { TypeId = item.TicketTypeId }, new { @class = "btn btn-outline-primary" }) |
-                    @Html.ActionLink("Delete", "Delete", new { TypeId = item.TicketTypeId }, new { @class = "btn btn-outline-primary" })
+                    @Html.ActionLink("Delete", "Delete", new { TypeId = item.TicketTypeId }, new { @class = "btn btn-outline-danger" })
             </td>
         </tr>
 }
