--- a/TipMvcApp/Views/Employee/Create.cshtml
+++ b/TipMvcApp/Views/Employee/Create.cshtml
@@ -17,7 +17,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="EmpId" class="control-label"></label>
-                <input asp-for="EmpId"  readonly class="form-control" />
+                <input asp-for="EmpId" class="form-control" />
                 <span asp-validation-for="EmpId" class="text-danger"></span>
             </div>
             <div class="form-group">
