--- a/TipMvcApp/Views/Shared/_Layout.cshtml
+++ b/TipMvcApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TipMvcApp.styles.css" asp-append-version="true" />
+    <style>
+        body{
+            background: url('/Images/Media.jfif') no-repeat center fixed;
+            background-size: cover;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: white;
+        }
+    </style>
     
 </head>
 <body>
